--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>DCR Portal - Host Site</title>
+    <title>DCR Chatbot UI</title>
     <style>
-        body { font-family: sans-serif; background-color: #f0f2f5; margin: 0; padding: 20px; }
-        .hero { background: white; padding: 50px; border-radius: 12px; text-align: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        
-        /* Hide the root React injection point so it doesn't overlap the host site */
-        #root:empty { display: none; }
-        #root { display: none; } 
+      /* Ensure the background is clean inside the widget */
+      body { margin: 0; padding: 0; background: white; }
     </style>
-</head>
-<body>
-    <div class="hero">
-        <h1>Development Control Regulations (DCR)</h1>
-        <p>This is the main website that contains the widget.</p>
-    </div>
-
-    <div id="chat-widget-container" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
-        <button id="chat-launcher" onclick="toggleChat()" style="width: 60px; height: 60px; border-radius: 50%; background: #2563eb; color: white; border: none; cursor: pointer; box-shadow: 0 4px 12px rgba(0,0,0,0.3); font-size: 24px; display: flex; align-items: center; justify-content: center;">
-            <span id="launcher-icon">💬</span>
-        </button>
-
-        <div id="chat-window" style="display: none; position: absolute; bottom: 80px; right: 0; width: 380px; height: 600px; border-radius: 16px; overflow: hidden; box-shadow: 0 8px 24px rgba(0,0,0,0.2); border: 1px solid #e2e8f0; background: white;">
-            <iframe src="/" style="width: 100%; height: 100%; border: none;"></iframe>
-        </div>
-    </div>
-
+  </head>
+  <body>
     <div id="root"></div>
-
-    <script>
-        function toggleChat() {
-            const win = document.getElementById('chat-window');
-            const icon = document.getElementById('launcher-icon');
-            const btn = document.getElementById('chat-launcher');
-            const isOpen = win.style.display === 'block';
-
-            win.style.display = isOpen ? 'none' : 'block';
-            icon.innerText = isOpen ? '💬' : '✖';
-            btn.style.backgroundColor = isOpen ? '#2563eb' : '#ef4444';
-        }
-
-        window.addEventListener('click', function(event) {
-            const container = document.getElementById('chat-widget-container');
-            const win = document.getElementById('chat-window');
-            if (!container.contains(event.target) && win.style.display === 'block') {
-                toggleChat();
-            }
-        });
-    </script>
-</body>
+  </body>
 </html>
